syntax = "proto3";
package kvPackage;

service KVService {
    rpc get(GetRequest) returns (GetResponse) {};
    rpc put(PutRequest) returns (PutResponse) {};
    rpc delete(DeleteRequest) returns (DeleteResponse) {};
}

message GetRequest {
    string key = 1;
}

message GetResponse {
    string value = 1;
}

message PutRequest {
    string key = 1;
    string value = 2;
}

message PutResponse {
    string value = 1;
}

message DeleteRequest {
    string key = 1;
}

message DeleteResponse {
    string value = 1;
}